--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@ mono_crash.*
 [Rr]eleases/
 x64/
 x86/
+externals/tcltk/
+externals/tcl-core-8.6.4.2/win/*_VC*/
+externals/tix-8.4.3.6/win/*_VC*/
+externals/tk-8.6.4.2/win/*_VC*/
+externals/openssl-1.0.2k/tmp/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
@@ -31,6 +36,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Dd]oc/build/
+PCbuild/amd64/pyshellext.*
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -396,3 +403,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Custom Files
+python.bat
